# opengl-gltf-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/glad/: glad.h
models/mazda_rx7__wheel/: license.txt  scene.gltf
src/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  camera.cpp  camera.hpp  glad.c  gui.cpp  gui.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shaderClass.cpp  shaderClass.hpp  texture.cpp  texture.hpp
src/shaders/: default.frag  default.vert
